<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ProfileEditViewmodel"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.ProfileEditViewmodel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="646dp"
            app:layout_constraintBottom_toTopOf="@+id/button_save_profile_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageView_user_img"
                    android:layout_width="match_parent"
                    android:layout_height="407dp"
                    android:cropToPadding="true"
                    app:srcCompat="@android:color/holo_green_light" />

                <EditText
                    android:id="@+id/textView_enter_userID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_user_id"
                    android:inputType="text"
                    android:padding="10dp"
                    android:text="@={ProfileEditViewmodel.userID}"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView_personal_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_sth_about_you_headline"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/editText_user_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/i_like_cooking_hint"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:text="@={ProfileEditViewmodel.userDesc}" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button_change_login_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="8dp"
            android:text="@string/change_login_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/button_save_profile_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_change_login_data"
            app:layout_constraintStart_toEndOf="@+id/button_delete_profile" />

        <Button
            android:id="@+id/button_delete_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="8dp"
            android:text="@string/delete_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
